# GakelDMultilabel

./: .pytest.ini  README.md  pyproject.toml  setup.py
Gakel/: __init__.py  base.py  br.py  gakeld.py  greedy.py  partition.py  problem_transformation.py
tests/: test_gakeld.py
