[tool.poetry]
name = "gakeldmultilabel"
version = "0.1.0"
description = "Rakel implementation but the groups of labels are chosen in a greedy way"
authors = ["Jose Perez-Parras Toledano <joseperezparras95@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
scikit-multilearn = "^0.2.0"
scikit-learn = "^0.21.2"
pytest = "^4.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
